# open-e2

./: AUTHORS  Makefile.am  README.md  configure.ac  enigma2.bb
data/: Makefile.am
lib/dvb/: dvb.cpp  frontend.cpp
lib/python/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/xml/: Makefile.am
lib/python/Plugins/SystemPlugins/FastScan/xml/bouq/: Makefile.am
lib/python/Plugins/SystemPlugins/SoftwareManager/: ImageBackup.py
lib/python/Tools/: Profile.py
po/: Makefile.am  de.po
